Cleanup unneeded classes.